--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Yonleniyor...</title>
     <script>
         // BURAYA CLOUDFLARE LINKINI YAZACAKSIN
-        window.location.replace("https://defence-musical-mls-dozens.trycloudflare.com/diag");
+        window.location.replace("https://defence-musical-mls-dozens.trycloudflare.com");
     </script>
 </head>
 <body style="background:#000;"></body>
